--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://MariiaHula.github.io/js-project-team-2",
+  "homepage": "https://aleksander2905.github.io/js-project-team",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /js-project-team-2/"
+    "build": "parcel build src/*.html --public-url /js-project-team/"
   },
   "repository": {
     "type": "git",
